[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LaunchRoblox"
version = "0.4.0"
authors = [
  { name="noaclr", email="154766525+noaclr@users.noreply.github.com" },
]
description = "A lightweight utility to programmatically authenticate and launch the Roblox client."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "psutil>=5.0.0",
    "httpx>=0.24.0",
]

[project.urls]
"Homepage" = "https://github.com/noaclr/LaunchRoblox"